# rust_visualizer

./: .gitignore  Cargo.toml  Dockerfile  README.md  Trunk.toml  index.html
.cargo/: audit.toml  config.toml
.github/workflows/: Ci.yml
assets/shaders/: disc_shader.wgsl  ico_shader.wgsl  kaleidoscope_shader.wgsl  tunnel_shader.wgsl
src/: audio.rs  audio_web.rs  camera.rs  config.rs  main.rs  ui.rs  viz_2d.rs  viz_3d.rs  viz_circular.rs  viz_disc.rs  viz_ico.rs  viz_kaleidoscope.rs  viz_matrix.rs  viz_orb.rs  viz_particles.rs  viz_starfield.rs  viz_terrain.rs  viz_tunnel.rs  viz_waveform.rs
